// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreStatsFilter should render score stats filter 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      2 scores
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search scores..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component quickSelectionOption dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      <span>
        Deselect all
      </span>
      <div
        class="badge badge--unselect"
      >
        2
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <label
        class="item dropdown-item form-check-label"
        role="menuitem"
        tabindex="0"
      >
        <input
          class="mr-2 checkbox"
          type="checkbox"
        />
         ★☆☆☆☆
      </label>
      <label
        class="item dropdown-item form-check-label"
        role="menuitem"
        tabindex="0"
      >
        <input
          checked=""
          class="mr-2 checkbox"
          type="checkbox"
        />
         ★★☆☆☆
      </label>
      <label
        class="item dropdown-item form-check-label"
        role="menuitem"
        tabindex="0"
      >
        <input
          class="mr-2 checkbox"
          type="checkbox"
        />
         ★★★☆☆
      </label>
      <label
        class="item dropdown-item form-check-label"
        role="menuitem"
        tabindex="0"
      >
        <input
          checked=""
          class="mr-2 checkbox"
          type="checkbox"
        />
         ★★★★☆
      </label>
      <label
        class="item dropdown-item form-check-label"
        role="menuitem"
        tabindex="0"
      >
        <input
          class="mr-2 checkbox"
          type="checkbox"
        />
         ★★★★★
      </label>
    </div>
  </div>
</div>
`;

exports[`ScoreStatsFilter should render score stats filter in descending order 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      2 scores
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search scores..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component quickSelectionOption dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      <span>
        Deselect all
      </span>
      <div
        class="badge badge--unselect"
      >
        2
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <label
        class="item dropdown-item form-check-label"
        role="menuitem"
        tabindex="0"
      >
        <input
          checked=""
          class="mr-2 checkbox"
          type="checkbox"
        />
         ★★★
      </label>
      <label
        class="item dropdown-item form-check-label"
        role="menuitem"
        tabindex="0"
      >
        <input
          class="mr-2 checkbox"
          type="checkbox"
        />
         ★★☆
      </label>
      <label
        class="item dropdown-item form-check-label"
        role="menuitem"
        tabindex="0"
      >
        <input
          checked=""
          class="mr-2 checkbox"
          type="checkbox"
        />
         ★☆☆
      </label>
    </div>
  </div>
</div>
`;
